# interbotix_ros_crawlers

./: README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
interbotix_ros_xshexapods/: README.md
interbotix_ros_xshexapods/examples/interbotix_xshexapod_joy/: CMakeLists.txt  README.md  package.xml
interbotix_ros_xshexapods/examples/interbotix_xshexapod_joy/config/: modes.yaml
interbotix_ros_xshexapods/examples/interbotix_xshexapod_joy/launch/: xshexapod_joy.launch
interbotix_ros_xshexapods/examples/interbotix_xshexapod_joy/msg/: HexJoy.msg
interbotix_ros_xshexapods/examples/interbotix_xshexapod_joy/scripts/: xshexapod_robot
interbotix_ros_xshexapods/examples/interbotix_xshexapod_joy/src/: xshexapod_joy.cpp
interbotix_ros_xshexapods/examples/python_demos/: README.md  move_in_place.py  push_ups.py  roll_pitch_combo.py  translate_xy_combo.py  uneven_terrain.py  usage.py  walk_in_square.py  wave_front_legs.py
interbotix_ros_xshexapods/install/: xshexapod_remote_install.sh
interbotix_ros_xshexapods/install/amd64/: xshexapod_amd64_install.sh
interbotix_ros_xshexapods/install/rpi4/: xshexapod_rpi4_boot.service  xshexapod_rpi4_install.sh  xshexapod_rpi4_launch.sh
interbotix_ros_xshexapods/interbotix_xshexapod_control/: CMakeLists.txt  README.md  package.xml
interbotix_ros_xshexapods/interbotix_xshexapod_control/config/: alpha.yaml  pxmark4s.yaml  wxmark4.yaml
interbotix_ros_xshexapods/interbotix_xshexapod_control/launch/: xshexapod_control.launch
interbotix_ros_xshexapods/interbotix_xshexapod_descriptions/: CMakeLists.txt  README.md  package.xml
interbotix_ros_xshexapods/interbotix_xshexapod_descriptions/launch/: remote_view.launch  xshexapod_description.launch
interbotix_ros_xshexapods/interbotix_xshexapod_descriptions/meshes/alpha_meshes/: alpha_base_link.stl  alpha_coxa_link.stl  alpha_femur_link.stl  alpha_tibia_link.stl
interbotix_ros_xshexapods/interbotix_xshexapod_descriptions/meshes/pxmark4s_meshes/: pxmark4s_base_link.stl  (+3 more)
interbotix_ros_xshexapods/interbotix_xshexapod_descriptions/rviz/: xshexapod_description.rviz
interbotix_ros_xshexapods/interbotix_xshexapod_descriptions/urdf/: alpha.urdf.xacro  pxmark4.urdf.xacro  pxmark4s.urdf.xacro  wxmark4.urdf.xacro
interbotix_ros_xshexapods/interbotix_xshexapod_gazebo/: CMakeLists.txt  README.md  package.xml
interbotix_ros_xshexapods/interbotix_xshexapod_gazebo/config/: interbotix_texture.gazebo
interbotix_ros_xshexapods/interbotix_xshexapod_gazebo/launch/: xshexapod_gazebo.launch
(+2 files in other folders)
